# ctm_demo

./: Cargo.toml  LICENSE  README.md
src/: dahlquist.rs  hardening_softening.rs  model.rs
tests/: test_dahlquist.rs  test_hardening_softening.rs
zscripts/: run_test.bash
