[package]
name = "ctm_demo"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Demonstration of the Consistent Tangent Modulus in Computational Plasticity"
homepage = "https://github.com/cpmech/ctm_demo"
repository = "https://github.com/cpmech/ctm_demo"
readme = "README.md"
categories = ["mathematics", "science", "simulation"]
keywords = [
  "computational plasticity",
  "consistent tangent modulus",
  "finite element method",
]

[dependencies]
russell_lab = { version = "1.10", features = ["intel_mkl"] }
russell_ode = { version = "1.10", features = [
  "intel_mkl",
  "local_suitesparse",
] }

[dev-dependencies]
plotpy = "1.13"
