[package]
name = "ctm_demo"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Demonstration of the Consistent Tangent Modulus in Computational Plasticity"
homepage = "https://github.com/cpmech/ctm_demo"
repository = "https://github.com/cpmech/ctm_demo"
readme = "README.md"
categories = ["mathematics", "science", "simulation"]
keywords = ["plasticity", "FEM"]

[dependencies]
russell_lab = "1.10"
russell_ode = "1.10"

[features]
intel_mkl = ["russell_lab/intel_mkl", "russell_ode/intel_mkl"]
local_suitesparse = ["russell_ode/local_suitesparse"]

[dev-dependencies]
plotpy = "1.13"
