[package]
name = "ctm_demo"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Demonstration of the Consistent Tangent Modulus in Computational Plasticity"
homepage = "https://github.com/cpmech/ctm_demo"
repository = "https://github.com/cpmech/ctm_demo"
readme = "README.md"
categories = ["mathematics", "science", "simulation"]
keywords = ["plasticity", "FEM"]

[dependencies]
russell_lab = "2.8"
russell_ode = "2.8"

[features]
intel_mkl = ["russell_lab/intel_mkl", "russell_ode/intel_mkl"]
local_sparse = ["russell_ode/local_sparse"]

[dev-dependencies]
plotpy = "1.23"
